[package]
name = "spytools"
version = "0.3.1"
authors = ["Julia Evans <julia@jvns.ca>", "Ben Frederickson <github@benfrederickson.com>", "Adam Jensen <adam@acj.sh>"]
description = "Tools for spying on running processes"
license = "MIT"
repository = "https://github.com/rbspy/spytools"
edition = "2018"

[dependencies]
anyhow = "1.0.98"
goblin = "0.10.0"
lazy_static = "1.5.0"
libc = "0.2.174"
log = "0.4.27"
memmap2 = "0.9.7"
proc-maps = "0.4.0"
regex = "1.11.1"
remoteprocess = "0.5.0"
